@@ -2,6 +2,10 @@
 
 	* Follow-up to #15853: Add z-index to admin panel
 
+2011-01-10  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Fixed bug #15133: Rendering images with ImageMagick fails to set file permissions (Thanks to Alexander Grein)
+
 2011-01-10  Ernesto Baschny  <ernst@cron-it.de>
 
 	* Fixed bug #16172: Accessing FE in fresh install fails with RuntimeException "No database selected" (Thanks to Lars Peipmann)
@@ -35,7 +39,7 @@
 
 	* Fixed bug #16828: missing XCLASS statement in t3lib/class.t3lib_compressor.php
 
-2011-01-06  Chrisstian Kuhn  <lolli@schwarzbu.ch>
+2011-01-06  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Fixed bug #16933: Remove XCLASS definition from t3lib_autoload
 	* Fixed bug #16931: [Caching framework] APC backend test setRemovesTagsFromPreviousSet() fails
